Update carousel images

--- a/src/components/Carousel/carousel.scss
+++ b/src/components/Carousel/carousel.scss
@@ -1,11 +1,44 @@
 @import "../../utils/globelstyle.scss";
 
+
 .image1 {
   background: url(../../assets/1.png) no-repeat;
   background-size: 100%;
   width: 271px;
   height: 500px;
   margin: 10px;
+}
+
+.image2{
+    background: url(../../assets/2.png) no-repeat;
+    background-size: 100%;
+    width: 271px;
+    height: 500px;
+    margin: 10px;  
+}
+
+.image3{
+    background: url(../../assets/3.png) no-repeat;
+    background-size: 100%;
+    width: 271px;
+    height: 500px;
+    margin: 10px;  
+}
+
+.image4{
+    background: url(../../assets/4.png) no-repeat;
+    background-size: 100%;
+    width: 271px;
+    height: 500px;
+    margin: 10px;  
+}
+
+.image5{
+    background: url(../../assets/5.png) no-repeat;
+    background-size: 100%;
+    width: 271px;
+    height: 500px;
+    margin: 10px;  
 }
 
 .whitecover-top {
