--- a/src/screens/Home/home.scss
+++ b/src/screens/Home/home.scss
@@ -61,6 +61,13 @@
     height: 60px;
     overflow: hidden;
 }
+
+@media screen and (max-width: 400px) {
+    .scroll-wrapper {
+        margin-top: 50px;
+    }
+}
+
 @keyframes moveUpDown {
     0% {
         transform: translateX(-10px);
