Add react-spinners library and implement loading screen

--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,15 @@ body {
     font-optical-sizing: auto;
     font-style: normal;
 }
+
+.loader {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 1000;
+}
