--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -1,7 +1,15 @@
 @import "../../utils/globelstyle.scss";
 
 .nav {
-  position: relative;
+  position: fixed;
+  display: flex;
+  align-items: center;
+  right: 0px;
+  left: 0px;
+  top: 0px;
+  z-index: 99999;
+  background: rgba(252, 252, 253, 0.8);
+  backdrop-filter: saturate(180%) blur(20px);
 }
 
 .nav-logo {
@@ -15,6 +23,7 @@
 
 .navbar {
   padding: 0 20px;
+  width: 100%;
 }
 
 .wrapper {
@@ -24,6 +33,7 @@
   max-width: 1200px;
   margin-left: auto;
   margin-right: auto;
+  z-index: 9999;
   border-bottom: 0.5px solid #d4d4d449;
 }
 
@@ -58,19 +68,23 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: absolute;
-  justify-content: space-around;
-  height: 90vh;
+  position: fixed;
+  top: 0px;
+  gap: 50px;
+  right: 0;
+  justify-content: center;
+  height: 100vh;
   width: 100%;
-  background: rgba(252, 252, 253, 0.8);
+  background: rgba(252, 252, 253, 0.97);
   backdrop-filter: saturate(180%) blur(20px);
   -webkit-box-align: center;
-  z-index: 9999;
+  z-index: 999;
   
   a {
     font-size: 30px;
     color: $neutralColor4;
     font-weight: 700;
+    text-align: center;
   }
 }
 
