--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,9 @@ body {
     transform: translate(-50%, -50%);
     z-index: 1000;
 }
+
+.error {
+    font-size: 100px;
+    text-align: center;
+    margin: 100px 0;
+}
