Update loading timeout in App.tsx, add subheaders class in about.scss, increase spin animation duration in button.scss, add ServiceCard component in index.ts, add meetus class in Meetus.tsx, add Project component in index.ts, update Home screen in Home.tsx, add default-wrapper class in globelstyle.scss

--- a/src/utils/globelstyle.scss
+++ b/src/utils/globelstyle.scss
@@ -18,3 +18,13 @@ $neutralColor5: #b1b5c3;
 $neutralColor6: #e6e8ec;
 $neutralColor7: #f4f5f6;
 $neutralColor8: #fcfcfd;
+
+
+.default-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
