--- a/src/components/About/about.scss
+++ b/src/components/About/about.scss
@@ -20,7 +20,7 @@
   margin-bottom: 10px;
 }
 
-.title-left {
+.title-left, .subheaders {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
