--- a/src/containers/Project/project.scss
+++ b/src/containers/Project/project.scss
@@ -24,10 +24,42 @@
 }
 .section-area{
     padding: 100px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     .subheaders {
         text-align: center;
         align-items: center;
     }
+}
+
+.our-work{
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-start;
+  gap: 35px;
+  max-width: 1000px;
+
+  .left-side, .right-side {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    gap: 50px;
+  }
+
+  .right-side{
+    padding-top: 200px;
+  }
+}
+
+@media screen and (max-width: 1024px) {
+  .our-work{
+    flex-direction: column;
+
+    .right-side{
+      padding-top: 15px;
+    }
+  }
 }
 
 @media screen and (max-width: 768px) {
