Delete unused image files and update image paths

--- a/src/components/Banner/banner.scss
+++ b/src/components/Banner/banner.scss
@@ -37,7 +37,7 @@
 
 .sphere-image {
   margin: 0 10px;
-  background: url(../../assets/Image.png) no-repeat center;
+  background: url(../../assets/01.webp) no-repeat center;
   width: 170px;
   height: 52px;
   display: inline-block;
