--- a/src/components/Carousel/carousel.scss
+++ b/src/components/Carousel/carousel.scss
@@ -1,7 +1,7 @@
 @import "../../utils/globelstyle.scss";
 
 .image1 {
-  background: url(../../assets/7.png) no-repeat;
+  background: url(../../assets/carousel/01.webp) no-repeat;
   background-size: 100%;
   width: 271px;
   height: 500px;
@@ -9,7 +9,7 @@
 }
 
 .image2 {
-  background: url(../../assets/4.png) no-repeat;
+  background: url(../../assets/carousel/02.webp) no-repeat;
   background-size: 100%;
   width: 271px;
   height: 500px;
@@ -17,7 +17,7 @@
 }
 
 .image3 {
-  background: url(../../assets/23.png) no-repeat;
+  background: url(../../assets/carousel/03.webp) no-repeat;
   background-size: 100%;
   width: 271px;
   height: 500px;
@@ -25,7 +25,7 @@
 }
 
 .image4 {
-  background: url(../../assets/8.png) no-repeat;
+  background: url(../../assets/carousel/04.webp) no-repeat;
   background-size: 100%;
   width: 271px;
   height: 500px;
@@ -33,7 +33,7 @@
 }
 
 .image5 {
-  background: url(../../assets/5.png) no-repeat;
+  background: url(../../assets/carousel/05.webp) no-repeat;
   background-size: 100%;
   width: 271px;
   height: 500px;
