Update styles in Banner, Cards, and Project components

--- a/src/components/Banner/banner.scss
+++ b/src/components/Banner/banner.scss
@@ -36,10 +36,11 @@
 }
 
 .sphere-image {
-  margin: 0 10px;
+  margin: 14px 10px 0 10px;
   background: url(../../assets/01.webp) no-repeat center;
   width: 170px;
   height: 52px;
+  border-radius: 70px;
   display: inline-block;
 
 }
