Add brand story to Brand component and update stroke-width attribute in WorkCard component

--- a/src/components/Brand/brand.scss
+++ b/src/components/Brand/brand.scss
@@ -29,6 +29,11 @@
   opacity: 1;
 }}
 
+.brand-story {
+  text-align: center;
+  max-width: 600px;
+}
+
 @media screen and (max-width: 1000px) {
   .brand-wrapper {
     justify-content: center;
