Add BlogSection component and update index.ts and Home.tsx

--- a/src/containers/Footer/footer.scss
+++ b/src/containers/Footer/footer.scss
@@ -5,6 +5,7 @@
   background: rgba(252, 252, 253, 0.8);
   backdrop-filter: saturate(180%) blur(20px);
   padding: 50px 20px;
+  bottom: 0;
   
   .nav-logo {
     height: 40px;
