--- a/src/containers/Blog/blogsection.scss
+++ b/src/containers/Blog/blogsection.scss
@@ -12,7 +12,7 @@
 
 @media screen and (max-width: 768px){
     .main-container {
-        padding: 20px 0;
+        padding: 20px 0 70px 0px;
     }
     
 }
