--- a/src/components/Navbar/navbar.scss
+++ b/src/components/Navbar/navbar.scss
@@ -68,18 +68,30 @@
 .mobile-menu {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: flex-start;
+  padding: 140px 30px;
   position: fixed;
   top: 0px;
   gap: 50px;
   right: 0;
-  justify-content: center;
+  justify-content: flex-start;
   height: 100vh;
   width: 100%;
   background: rgba(252, 252, 253, 0.97);
   backdrop-filter: saturate(180%) blur(20px);
   -webkit-box-align: center;
   z-index: 999;
+
+  .footer-buttom {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+
+    a {
+      font-size: 16px;
+    }
+  }
   
   a {
     font-size: 30px;
@@ -89,6 +101,11 @@
   }
 }
 
+@media screen and (min-width: 768px) {
+  .mobile-menu {
+    display: none;
+  }
+}
 
 @media screen and (max-width: 768px) {
   .nav-links {
