Update styles for responsive design

--- a/src/components/Cards/cards.scss
+++ b/src/components/Cards/cards.scss
@@ -204,6 +204,12 @@
     }}
 }
 
+@media screen and (max-width: 900px) {
+  .about-us-card {
+    max-width: 100%;
+  }
+}
+
 @media screen and (max-width: 704px) {
   .service-image {
     img {
