--- a/src/components/PageBanner/pagebanner.scss
+++ b/src/components/PageBanner/pagebanner.scss
@@ -7,6 +7,7 @@
     align-items: center;
     letter-spacing: -.02em;
     margin: 160px 0 30px 0;
+    padding: 0 20px;
 
   h1 {
     font-size: 80px;
