--- a/src/screens/Work/work.scss
+++ b/src/screens/Work/work.scss
@@ -1,3 +1,35 @@
 .work-screen {
-    text-align: center;
+  text-align: center;
+
+  .work-card-content {
+    align-items: flex-start;
+  }
+}
+
+.latest-work {
+  border-radius: 50%;
+}
+
+.our-latest {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 30px;
+  position: relative;
+  height: 376px;
+  p {
+    font-size: 60px;
+    font-weight: 700;
+    display: inline-block;
+  }
+
+  .work-text2 {
+    align-self: self-end;
+  }
+}
+
+.latest-work {
+  position: absolute;
+  top: 0;
+  z-index: 2;
+  display: inline-block;
 }
